--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     color: var(--black);
-    background: #E5E5E5;
+    background: #F5F6F8;
     font-family: var(--font-family);
 }
 
@@ -18,8 +18,10 @@ a {
 
 :root {
     --black: #3B434E;
+    --gray-light: #EBEBEB;
     --white: white;
     --primary: #7653FC;
+    --primary-hover: #6344df;
     --red: #FC836D;
     --green: #1DC37E;
     --green-light: #C8F8E4;
