--- a/components/Tag/Tag.module.css
+++ b/components/Tag/Tag.module.css
@@ -29,7 +29,7 @@
 
 .gray {
     color: var(--white);
-    background: #B3C0D9;
+    background: #51648C;
     font-weight: bold;
 }
 
@@ -42,6 +42,6 @@
 .primary {
     color: var(--primary);
     background: none;
-    border: 1px solid var(--gray-light);
+    border: 1px solid var(--primary);
     font-weight: bold;
 }
