--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -3,12 +3,12 @@
     grid-template-columns: auto 230px minmax(320px, 1200px) auto;
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
-    grid-template-areas: ". header header ." ". sidebar body ." "footer footer footer foter";
+    gap: 40px 30px;
+    grid-template-areas: ". header header ." ". sidebar body ." "footer footer footer footer";
 }
 
 .header {
     grid-area: header;
-    display: none;
 }
 
 .sidebar {
@@ -17,21 +17,38 @@
 
 .body {
     grid-area: body;
+    outline: none;
 }
 
 .footer {
     grid-area: footer;
 }
 
+.skipLink {
+    display: block;
+    position: fixed;
+    left: 100px;
+    top: 0;
+    overflow: hidden;
+    height: 0;
+    background: var(--primary);
+    color: var(--white);
+}
+
+.displayed {
+    height: auto;
+}
+
 @media (max-width: 765px) {
     .wrapper {
-        grid-template-columns: minmax(320px 1fr);
+        grid-template-columns: minmax(320px, 1fr);
         grid-template-areas: "header" "body" "footer";
-    }
-    .header {
-        display: block;
+        gap: 10px;
     }
     .sidebar {
-        display: none;
+        display: none !important;
+    }
+    .body {
+        padding: 0 15px;
     }
 }
