--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -1,6 +1,7 @@
 .product {
     display: grid;
     grid-template-columns: [start] 70px [logoend] 30px [titlestart] calc( 50% - 100px) [middle] 1fr [pricestart] auto [priceend] 40px [creditstart] auto [creditend] 40px [ratestart] auto [end];
+
     margin-top: 30px;
     padding: 30px;
 }
@@ -18,6 +19,7 @@
 .price,
 .priceTitle {
     grid-column: pricestart / priceend;
+
     white-space: nowrap;
 }
 
@@ -29,6 +31,7 @@
 .rating,
 .rateTitle {
     grid-column: ratestart / end;
+
     white-space: nowrap;
 }
 
@@ -38,7 +41,9 @@
 
 .description {
     grid-column: start / end;
+
     margin-bottom: 15px;
+
     font-size: 16px;
     line-height: 24px;
 }
@@ -57,6 +62,7 @@
 
 .title {
     align-self: flex-end;
+
     font-size: 20px;
     font-weight: 600;
     line-height: 27px;
@@ -74,6 +80,7 @@
 .price,
 .credit {
     align-self: flex-end;
+
     font-size: 20px;
     line-height: 27px;
 }
@@ -96,6 +103,7 @@
 
 .reviews {
     overflow: hidden;
+
     height: inherit;
     padding: 30px;
 }
@@ -111,6 +119,7 @@
 
 .advTitle {
     margin-bottom: 5px;
+
     font-size: 16px;
     font-weight: bold;
     line-height: 22px;
@@ -119,20 +128,25 @@
 .advantages {
     margin-bottom: 20px;
     padding-left: 15px;
-    border-left: 2px solid #1dc37e;
+
+    border-left: 2px solid #1DC37E;
 }
 
 .disadvantages {
     padding-left: 15px;
+
     border-left: 2px solid var(--red);
 }
 
 .characteristics {
     display: grid;
     grid-template-columns: auto 1fr auto;
+
     padding-right: 60px;
+
     font-size: 16px;
     gap: 10px;
+
     line-height: 32px;
 }
 
@@ -142,6 +156,7 @@
 
 .characteristicsDots {
     margin-bottom: 10px;
+
     border-bottom: 1px dashed var(--gray-light);
 }
 
@@ -154,52 +169,70 @@
         grid-template-columns: 70px 30px auto 40px auto 40px 1fr;
         grid-template-areas: 'logo . title title title title title' 'logo . tags tags tags tags tags' 'price price price . credit . rating' 'priceTitle priceTitle priceTitle . creditTitle . rateTitle' 'hr hr hr hr hr hr hr' 'description description description description description description description' 'feature feature feature feature feature feature feature' 'advBlock advBlock advBlock advBlock advBlock advBlock advBlock' 'hr2 hr2 hr2 hr2 hr2 hr2 hr2' 'actions actions actions actions actions actions actions';
     }
+
     .logo {
         grid-area: logo;
+
         margin-bottom: 20px;
     }
+
     .title {
         grid-area: title;
     }
+
     .tags {
         grid-area: tags;
+
         margin-bottom: 20px;
     }
+
     .price {
         grid-area: price;
     }
+
     .credit {
         grid-area: credit;
     }
+
     .rating {
         grid-area: rating;
     }
+
     .priceTitle {
         grid-area: priceTitle;
     }
+
     .creditTitle {
         grid-area: creditTitle;
     }
+
     .rateTitle {
         grid-area: rateTitle;
     }
+
     .hr {
         grid-area: hr;
     }
+
     .description {
         grid-area: description;
     }
+
     .feature {
         grid-area: feature;
+
         margin-bottom: 20px;
     }
+
     .advBlock {
         grid-column: middle / end;
         grid-area: advBlock;
     }
+
     .hr2 {
         grid-area: hr2;
     }
+
     .actions {
         grid-area: actions;
     }
@@ -210,6 +243,7 @@
         grid-template-columns: 70px 30px 1fr;
         grid-template-areas: 'logo . title' 'logo . tags' 'priceTitle priceTitle price' 'creditTitle creditTitle credit' 'rateTitle rateTitle rating' 'hr hr hr' 'description description description' 'feature feature feature' 'advBlock advBlock advBlock' 'hr2 hr2 hr2' 'actions actions actions';
     }
+
     .price,
     .credit,
     .rating {
