--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -1,12 +1,14 @@
 .firstLevel {
     display: grid;
+    align-items: center;
+
+    margin-top: 20px;
+
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 25px;
     grid-template-columns: 24px 1fr;
     gap: 20px;
-    align-items: center;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 25px;
-    margin-top: 20px
 }
 
 .firstLevelActive,
@@ -21,44 +23,57 @@
 
 .secondLevel {
     margin-bottom: 10px;
+    padding: 0;
+
     cursor: pointer;
     text-transform: uppercase;
+
     color: var(--gray-dark);
-    font-weight: 300;
-    font-size: 12px;
-    background: none;
     border: none;
-    padding: 0;
+    background: none;
+
+    font-size: 12px;
+    font-weight: 300;
 }
 
 .firstLevelList {
-    list-style: none;
     padding: 0;
+
+    list-style: none;
 }
 
 .secondBlock {
-    list-style: none;
     margin-top: 15px;
     margin-left: 13px;
     padding: 0 0 0 32px;
+
+    list-style: none;
+
     border-left: 1px solid #DFDFDF;
 }
 
 .secondLevelBlock {
-    list-style: none;
-    padding: 0;
     overflow: hidden;
+
+    padding: 0;
+
+    list-style: none;
 }
 
 .thirdLevel {
     display: block;
+
     margin-bottom: 10px;
+
     cursor: pointer;
+
     color: var(--gray-dark);
-    font-weight: 500;
-    font-size: 14px;
+
     /* line-height: 19px; */
     outline-offset: -1px;
+
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .thirdLevelActive,
